feat: 添加 TestFlow 功能，支持从 TAPD 生成测试用例并导出为 XMind 文件，新增邮件发送功能。更新配置文件以支持相关设置，增加测试人员映射和 SMTP 配置。补充文档和示例以指导用户使用新功能。

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,29 @@ LOG_LEVEL=INFO
 CREATION_OWNER_SUBSTR=江林
 CREATION_REQUIRE_CURRENT_ITERATION=1
 
+# Notifications
+# WECOM_WEBHOOK_URL=https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=xxxx
+
+# TestFlow / LLM
+OLLAMA_HOST=http://127.0.0.1:11434
+OLLAMA_MODEL=gpt-oss:20b
+# OLLAMA_TIMEOUT=60
+# OLLAMA_MAX_RETRIES=3
+# OLLAMA_TEMPERATURE=0.1
+TESTFLOW_TESTERS_PATH=config/testers.json
+TESTFLOW_OUTPUT_DIR=data/testflow
+# TESTFLOW_PROMPT_PATH=config/testflow_prompt.md
+# TESTFLOW_MAIL_DRY_RUN=1
+
+# SMTP for TestFlow notifications (optional, leave blank for dry-run)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=465
+# SMTP_USER=
+# SMTP_PASSWORD=
+# SMTP_USE_TLS=1
+# SMTP_USE_SSL=0
+# MAIL_SENDER=testflow@example.com
+
 # FE hours mapping
 # TAPD_FE_HOURS_KEYS=custom_field_fe,front_end_hours,前端工时
 # NOTION_FE_HOURS_PROP=前端工时
