--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ tenacity>=8.2.3
 pydantic>=2.7.0
 python-dotenv>=1.0.1
 beautifulsoup4>=4.12.2
+fastapi>=0.111.0
+uvicorn[standard]>=0.30.0
 # Testing
 pytest>=7.4.0
